Drop support for AdaSockets. -- Work for GB06-031.

--- a/makefile.conf
+++ b/makefile.conf
@@ -38,17 +38,10 @@ XMLADA	= false
 ASIS	= false
 
 ##############################################################################
-# Adasockets, optional. AWS use GNAT.Sockets as the default socket package. If
-# you want to use AdaSockets just uncomment the ADASOCKETS variable below and
-# set it to point to the AdaSockets install directory.
-#
-#ADASOCKETS = /opt/adasockets
-
-##############################################################################
 # IPv6, optional. If you want to use IPv6 sockets just uncomment the IPv6
-# variable below. Don't use ADASOCKETS together with IPv6 option.
+# variable below.
 #
-#IPv6 = true
+IPv6	= false
 
 ##############################################################################
 # AWS supports SSL (Secure Socket Layer). The SSL support is always built-in
@@ -58,7 +51,7 @@ ASIS	= false
 # on this platform. (note that below ssl and openssl are aliases).
 # SOCKET = [std/ssl/openssl/gnutls]
 #
-SOCKET=std
+SOCKET	= std
 
 ##############################################################################
 # AWS provides a binding to the LDAP API. This binding will use the standard
@@ -117,6 +110,12 @@ endif
 ifneq ($(DEBUG), true)
 ifneq ($(DEBUG), false)
 $(error DEBUG variable must be set to true or false)
+endif
+endif
+
+ifneq ($(IPv6), true)
+ifneq ($(IPv6), false)
+$(error IPv6 variable must be set to true or false)
 endif
 endif
 
