Add consistency check for the SOCKET variable. Remove ssl as a possible value, only support openssl, gnutls and std. General clean-up.

--- a/makefile.conf
+++ b/makefile.conf
@@ -49,7 +49,7 @@ IPv6	= false
 # this case you must have installed OpenSSL on you computer. OpenSSL libraries
 # are distributed on Windows platforms therefore the SSL mode is the default
 # on this platform. (note that below ssl and openssl are aliases).
-# SOCKET = [std/ssl/openssl/gnutls]
+# SOCKET = [std/openssl/gnutls]
 #
 SOCKET	= std
 
@@ -147,6 +147,14 @@ ifeq ($(ASIS), true)
 ifeq ($(XMLADA), false)
 $(error ASIS is set and requires XMLADA to be installed. \
 	You may be missing XMLADA=true)
+endif
+endif
+
+ifneq ($(SOCKET), std)
+ifneq ($(SOCKET), openssl)
+ifneq ($(SOCKET), gnutls)
+$(error SOCKET variable must be set to std, openssl or gnutls)
+endif
 endif
 endif
 
