Do not keep regtests/makefile.lst into revision control.
This is cleaner as we really don't want to keep this file under
revision control. It was there as this file was included from
regtests/makefile. It turn out that using a '-' in front of the
include is sufficient to avoid the problem.

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ regtests/hotplug_access.ini
 regtests/icons
 regtests/icons/
 regtests/makefile.downloaded
+regtests/makefile.lst
 regtests/my_file_upload
 regtests/patch
 regtests/regtests_lst.gpr
