Remove lib directory as not needed anymore.
At the same time this patch fix the SSL setup which was still
pointing to the lib directory. Adjust the way the SSL libraries
are installed on Win32 as only the relocatable versions are supported.
We build the import libraries.

--- a/win32/makefile
+++ b/win32/makefile
@@ -88,7 +88,12 @@ setup:
 	-$(MKDIR) -p $(LDIR)
 
 install_win32:
-	$(CP) ../$(BDIR)/lib/win32/* $(I_LIB)
+	-$(MKDIR) -p $(INSTALL)/lib/aws/relocatable
+	$(CP) $(LIBSSL) $(INSTALL)/lib/aws/relocatable
+	$(CP) $(LIBCRYPTO) $(INSTALL)/lib/aws/relocatable
+	$(CP) $(LIBLDAP) $(INSTALL)/lib/aws/relocatable
+	$(CP) $(LDIR)/libaws_win32.a $(I_LIB)
+	$(CP) $(AWS_COFF) $(I_LIB)
 
 install: $(TINSTALL)
 
