Change install directory for Win32 specific libraries.
Those libraries were installed into the AWS relocatable
library directory. This was not clean as when building an
application in static mode we had to point the linker
to the relocatable directory. Those libraries are now
copied into aws/common directory. No bug fix, just an
installation clean-up.

--- a/win32/makefile
+++ b/win32/makefile
@@ -88,10 +88,10 @@ setup:
 	-$(MKDIR) -p $(LDIR)
 
 install_win32:
-	-$(MKDIR) -p $(INSTALL)/lib/aws/relocatable
-	$(CP) $(LIBSSL) $(INSTALL)/lib/aws/relocatable
-	$(CP) $(LIBCRYPTO) $(INSTALL)/lib/aws/relocatable
-	$(CP) $(LIBLDAP) $(INSTALL)/lib/aws/relocatable
+	-$(MKDIR) -p $(INSTALL)/lib/aws/common
+	$(CP) $(LIBSSL) $(INSTALL)/lib/aws/common
+	$(CP) $(LIBCRYPTO) $(INSTALL)/lib/aws/common
+	$(CP) $(LIBLDAP) $(INSTALL)/lib/aws/common
 	$(CP) $(LDIR)/libaws_win32.a $(I_LIB)
 	$(CP) $(AWS_COFF) $(I_LIB)
 
