Add support for connect client timeout.
The AWS.Net API has all the necessary code to handle connect
timeout. This feature is now exposed on the AWS.Client high
level API, in the AWS/SOAP support and wsdl2aws tool.

* demos/makefile:
  (build_wsdl): Use new wsdl2aws's -timeout option.

* docs/features:
  Update accordingly.

* readme.txt:
  Add note about this non upward compatible change.

* src/aws-messages.ads:
  (Informational): New subtype of Status_Code.
  (Success): Likewise.
  (Redirection): Likewise.
  (Client_Error): Likewise.
  (Server_Error): Likewise.

* regtests/auth1.adb, regtests/head.adb, regtests/hload_pack.adb,
  regtests/moved.adb, regtests/sp_pack.adb, regtests/sp_pck.adb,
  regtests/strm.adb, regtests/strm2.adb, regtests/tclientto.adb,
  regtests/unexph.adb, regtests/unexph2.adb, regtests/xmlt_proc.adb:
  Adapt to new Timeouts_Values.

* regtests/makefile:
  (WSDL_TESTS): Add test_soap_timeout.

* regtests/connect_timeout.{adb,out}:
  New non regression test.

* regtests/test_soap_timeout.{adb,out,wsdl}:
  New non regression test.

* soap/soap-client.adb:
  (Call): Check the SOAP response. Do not try to parse the XML
   result payload if an error is returned. In this case we return
   a SOAP error message.

* soap/soap-generator-stub.adb:
  (New_Procedure): Add timeouts parameter to generated SOAP call.

* soap/soap-generator.adb:
  (Put_Header): Generate new stub timeouts parameter.
  (Set_Timeouts): New procedure.
  (Start_Service): Generate the timeouts contant in parent package.

* soap/soap-generator.ads:
  (Version): Bump version to 2.2.0.
  (Set_Timeouts): New procedure.
  (Object): Add Timeouts field.

* src/aws-client-http_utils.adb:
  (Connect): Set the socket timeout for connecting.
  Adjust all usage of Timeouts as we are now using the
  standard record Timeouts_Values for storing them instead
  of the adhoc variables.

* src/aws-client.adb:
  (Create): Store timeout in the Timeouts record.
  Adjust all usage of Timeouts as we are n

--- a/demos/makefile
+++ b/demos/makefile
@@ -32,7 +32,7 @@ build_res:
 
 build_wsdl:
 	echo Generate stub/skel from WSDL documents
-	$(WSDL2AWS) -q -f -doc hello.wsdl
+	$(WSDL2AWS) -q -f -doc -timeouts 1,2,2 hello.wsdl
 	$(WSDL2AWS) -q -f -doc -noskel interoplab_main.wsdl
 
 force:
