Add support for registering the default library type.
It is possible to build the AWS runtime as a static or
shared libraries. The last built library kind is now
registered as being the default. This has also the advantage
of requiring zero configuration when building a single
version of the runtime.

* makefile:
  (setup_commit): Register the default library type into
   Default_Library_Type in aws_config.gpr generated project.

* config/projects/aws_shared.gpr:
  (Library_Type): Use AWS_Config.Default_Library_Type.

* makefile.conf:
  Document this new feature.
--
Work for H118-017.

--- a/makefile.conf
+++ b/makefile.conf
@@ -13,7 +13,12 @@ INSTALL	 = $(dir $(shell which gnatls))..
 
 ##############################################################################
 # Set to true if AWS must be built as a shared library. If SHARED is set to
-# false AWS is built as a static library.
+# false AWS is built as a static library. It is possible to build and
+# install both versions of the AWS runtime (static and shared) by building
+# with SHARED set to true and then to set to false. The last built version
+# will be used as the default when building applications.
+#
+# SHARED = [true/false]
 #
 SHARED	= true
 
