--- a/makefile.conf
+++ b/makefile.conf
@@ -9,6 +9,7 @@
 # AWS will be installed under $(INSTALL). Update this variable to point to
 # the install directory. You probably want to set this to the GNAT root
 # directory to have AWS project files automatically available.
+#
 INSTALL	 = $(dir $(shell which gnatls))..
 
 ##############################################################################
@@ -27,6 +28,7 @@ SHARED	= true
 # to true to activate XML/Ada support, you must also set ADA_PROJECT_PATH
 # to point to the XML/Ada project files if not installed in the standard
 # location.
+#
 # XMLADA = [true/false]
 #
 XMLADA	= false
@@ -38,6 +40,7 @@ XMLADA	= false
 # ASIS project files if not installed in the standard location.
 #
 # If you activate ASIS you also need to activate XMLADA above.
+#
 # ASIS = [true/false]
 #
 ASIS	= false
@@ -45,6 +48,8 @@ ASIS	= false
 ##############################################################################
 # IPv6, optional. If you want to use IPv6 sockets just uncomment the IPv6
 # variable below.
+#
+# IPv6 = [true/false]
 #
 IPv6	= false
 
@@ -54,6 +59,7 @@ IPv6	= false
 # this case you must have installed OpenSSL on you computer. OpenSSL libraries
 # are distributed on Windows platforms therefore the SSL mode is the default
 # on this platform. (note that below ssl and openssl are aliases).
+#
 # SOCKET = [std/openssl/gnutls]
 #
 SOCKET	= std
@@ -64,11 +70,14 @@ SOCKET	= std
 # if it is not already installed. If LDAP is installed on your system you can
 # set LDAP=true below.
 #
+# LDAP = [true/false]
+#
 LDAP	= false
 
 ##############################################################################
 # To activate the debug mode just uncomment the variable below. This will
 # build AWS with debug information and will output more build information.
+#
 # DEBUG = [true/false]
 #
 DEBUG	= false
