Rename discriminant SOAP to XMLADA and used it to jabber tests.
The discriminant for the tests was named SOAP because SOAP was
using XML/Ada in fact. But Jabber needed also a check, it is
cleaner to use XMLADA as a discriminant as this is really what
is needed to support those tests.
Fix Jabber test when XML/Ada is not set.
--
Work for H303-007.

--- a/.gitignore
+++ b/.gitignore
@@ -80,8 +80,8 @@ regtests/patch
 regtests/regtests_lst.gpr
 regtests/s_mains.lst
 regtests/s_tsec.lst
-regtests/s_tsecsoap.lst
-regtests/s_tsoap.lst
+regtests/s_tsecxmlada.lst
+regtests/s_txmlada.lst
 regtests/s_tstd.lst
 regtests/test_all
 regtests/test_all.adb
